fix: modal dropdown z-index

--- a/webui/src/scss/_controls.scss
+++ b/webui/src/scss/_controls.scss
@@ -108,7 +108,7 @@ label.disabled {
 }
 
 .select-control__menu-portal {
-	z-index: 100 !important;
+	z-index: 1200 !important;
 }
 
 .select-control__control {
